# hawi

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
docs/: README.md  STREAMING_SUPPORT_PLAN.md  architecture.md  event_system.md  event_system_design.md  hook_system.md  models.md  quickstart.md  tools.md
hawi/agent/: __init__.py  agent.py  context.py  events.py  hooks.py  message.py  messages.py  model.py  printers.py  result.py
hawi/agent/model/: model.py
hawi/agent/models/: __init__.py  _utils.py  deepseek_anthropic.py  deepseek_openai.py  kimi_anthropic.py  kimi_openai.py  strands.py  strands_adapter.py
hawi/agent/models/anthropic/: __init__.py  _converters.py  _model.py  _streaming.py  _utils.py
hawi/agent/models/deepseek/: __init__.py  deepseek.py  deepseek_anthropic.py  deepseek_openai.py
hawi/agent/models/kimi/: __init__.py  kimi.py  kimi_anthropic.py  (+1 more)
hawi/agent/printers/: __init__.py  base.py  markdown.py  plain.py  rich.py
hawi/agent_tools/: multi_python_interpreter.py  python_interpreter.py
hawi/builder/: pyproject.toml
hawi/plugin/: __init__.py  decorators.py  plugin.py  types.py
hawi/plugin/resource/: __init__.py  implementations.py  resource.py
hawi/resources/: implementations.py
hawi/tool/: __init__.py  _utils.py  base.py  function_tool.py  registry.py  types.py
hawi/utils/: __init__.py  context.py  lifecycle.py  terminal.py
hawi_plugins/mcp_plugin/: README.md  __init__.py  client.py  examples.py  plugin.py
hawi_plugins/python_interpreter/: __init__.py  multi_python_interpreter.py  python_interpreter.py
model_compatibility/: __init__.py  deepseek.py  kimi_anthropic.py  kimi_openai.py
test/integration/: __init__.py  test_deepseek_anthropic_integration.py  test_deepseek_integration.py  test_events_integration.py  test_hawi_agent.py  test_kimi_anthropic_integration.py  test_kimi_openai_integration.py
test/integration/models/: __init__.py  test_deepseek_anthropic.py  test_deepseek_openai.py  test_kimi_anthropic.py  test_kimi_openai.py  test_minimax_anthropic.py  test_minimax_openai.py
test/unit/: test_agent_tool.py  test_deepseek_api_compliance.py  test_events.py  test_events_advanced.py  test_exit_handler.py  test_kimi_api_compliance.py  test_model_validation.py  test_multi_python_interpreter.py  test_python_interpreter.py  test_strands_adapter.py  test_strands_model.py  test_system_prompt.py  test_tool_audit.py  test_tool_context.py
test/unit/plugins/: test_mcp_plugin.py  test_multi_python_interpreter.py  test_plugin_hooks.py  test_python_interpreter.py
tool/: multi_python_interpreter.py  python_interpreter.py
utils/: exit_handler.py
(+8 files in other folders)
