[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.0",
    "httpx[socks]>=0.28.1",
    "openai>=2.16.0",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "strands-agents>=1.24.0",
    "strands-agents-tools>=0.2.19",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
