[project]
name = "hawi"
version = "0.1.0"
description = "AI Agent framework with model compatibility layers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.0",
    "httpx[socks]>=0.28.1",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=3.0.0",
    "markdownify>=1.2.2",
    "openai>=2.16.0",
    "prompt-toolkit>=3.0.52",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "strands-agents>=1.24.0",
    # "strands-agents-tools>=0.2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hawi*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.workspace]
members = [
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
