[project]
name = "builder"
version = "0.1.0"
description = "Builder for agents and workflows from configuration"
requires-python = ">=3.13"
dependencies = [
    "utils",
    "tool",
    "agent",
    "workflow",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["builder"]

[tool.uv.sources]
utils = { workspace = true }
tool = { workspace = true }
agent = { workspace = true }
workflow = { workspace = true }
